# omen-agentic-time-series-forecasting

./: .gitignore  AGENTS.md  LICENSE  README.md  openclaw.config.snippet.jsonc  pyproject.toml
.github/workflows/: ci.yml
blog-posts/: introducing-omen.md  ts-analyst-gets-a-statistics-degree.md  ts-deploy-ships-it.md  ts-forecaster-shows-its-work.md  ts-monitor-learns-to-doubt-good-news.md  ts-retrain-checks-its-papers.md
book/: about_the_author.md  ai_use_statement.md  appendix-a-glossary.md  appendix-b-tool-reference.md  appendix-c-further-reading.md  chapter-01-introducing-omen-and-agentic-ai.md  chapter-02-installing-omen.md  chapter-03-first-contact.md  chapter-04-is-this-thing-stable.md  chapter-05-the-rhythm-of-evil.md  chapter-06-echoes.md  chapter-07-spikes-and-regime-changes.md  chapter-08-the-floor-is-naive.md  chapter-09-smoothing-things-over.md  chapter-10-sarima-and-the-order-selection-ritual.md  chapter-11-teaching-trees-to-predict-the-future.md  chapter-12-statistically-better-or-just-different.md  chapter-13-trustworthy-across-time.md  chapter-14-deploying-for-real.md  chapter-15-strength-in-numbers.md  chapter-16-watching-the-watchtower.md  chapter-17-when-to-sound-the-alarm.md  chapter-18-should-you-even-redeploy.md  chapter-19-the-suspicious-foreman.md  chapter-20-prompting-omen-like-you-mean-it.md  chapter-21-when-to-trust-the-agent.md  chapter-22-conclusion.md  dedication.md  frontmatter.md  outline.md
book/examples/: README.md  assemble_book.py  generate_book_datasets.py  generate_book_plots.py
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
prompts/: testing-and-learning-prompts.md
src/omen/: __init__.py  data_prep.py  plotting.py
src/omen/analyst/: analysis_tools.py  plot_tools.py  server.py
src/omen/deploy/: forecast_tools.py  plot_tools.py  server.py
src/omen/forecaster/: model_tools.py  plot_tools.py  server.py
src/omen/monitor/: monitor_tools.py  plot_tools.py  server.py
src/omen/retrain/: retrain_tools.py  server.py
src/omen/skills/ts-analyst/: SKILL.md
src/omen/skills/ts-deploy/: SKILL.md
src/omen/skills/ts-forecaster/: SKILL.md
src/omen/skills/ts-monitor/: SKILL.md
src/omen/skills/ts-retrain/: SKILL.md
tests/: test_analyst_plot_tools.py  test_analyst_tools.py  test_data_prep.py  test_deploy_plot_tools.py  test_deploy_tools.py  test_forecaster_plot_tools.py  test_forecaster_tools.py  test_monitor_plot_tools.py  test_monitor_tools.py  test_retrain_tools.py
