[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omen-agentic-forecasting"
version = "0.0.1"
description = "Omen: agentic time series analysis, forecasting, backtesting, deployment, and monitoring tools, exposed as FastMCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Emily Marie Williams", email = "emw314159@gmail.com" },
]
keywords = ["omen", "agentic", "time-series", "forecasting", "mcp", "agents", "openclaw", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
analyst = ["statsmodels>=0.14", "scipy>=1.11"]
forecaster = ["statsmodels>=0.14", "scikit-learn>=1.4"]
deploy = ["statsmodels>=0.14", "scikit-learn>=1.4"]
monitor = ["scipy>=1.11"]
retrain = []
all = ["statsmodels>=0.14", "scikit-learn>=1.4", "scipy>=1.11"]
dev = ["pytest>=8.0", "ruff>=0.15", "mypy>=1.10", "pandas-stubs", "scipy-stubs"]

[project.urls]
Homepage = "https://github.com/badass-data-science/omen-agentic-time-series-forecasting"
Repository = "https://github.com/badass-data-science/omen-agentic-time-series-forecasting"

# Console scripts: after `pip install`, these run each layer's MCP server
# directly, so OpenClaw (or any MCP client) can point its config at the
# installed command instead of an absolute path to a .py file. Script
# NAMES stay ts-analyst-server etc. (the five layers' own established
# branding) even though the PyPI distribution name is
# "omen-agentic-forecasting" -- the importable module stays plain
# `omen` (see [tool.hatch.build.targets.wheel] below), only the PyPI
# listing name changed, since "omen" was already taken.
# See AGENTS.md for why the script names weren't renamed too.
[project.scripts]
ts-analyst-server = "omen.analyst.server:main"
ts-forecaster-server = "omen.forecaster.server:main"
ts-deploy-server = "omen.deploy.server:main"
ts-monitor-server = "omen.monitor.server:main"
ts-retrain-server = "omen.retrain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
# Pinned to the highest supported version (3.10-3.12 per classifiers above),
# not the lowest -- newer numpy releases ship stub files using PEP 695 `type`
# statement syntax (3.12+ only), which mypy's parser rejects outright when
# targeting 3.10, even though nothing in Omen's own code is version-gated.
python_version = "3.12"
files = ["src/omen"]
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true

# statsmodels/sklearn ship no py.typed marker and have no usable third-party
# stub package; fastmcp.tools.tool resolves fine at runtime (fastmcp exposes
# ToolResult through it dynamically) but isn't a real file mypy can walk
# statically. All three are genuine third-party stub-coverage gaps, verified
# by hand -- not a signal to chase further or silence more broadly.
[[tool.mypy.overrides]]
module = ["statsmodels.*", "sklearn.*", "fastmcp.*"]
ignore_missing_imports = true
